[package]
name = "solana-perf"
version = "1.8.14"
description = "Solana Performance APIs"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-perf"
edition = "2018"

[dependencies]
bincode = "1.3.1"
curve25519-dalek = { version = "2" }
ahash = "0.7.6"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
serde = "1.0.126"
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-rayon-threadlimit = { git = "https://github.com/solindex/rayon-threadlimit.git", version = "=1.8.14" }
solana-bloom = { git = "https://github.com/solindex/bloom.git", version = "=1.8.14" }
solana-vote-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }

[target."cfg(target_os = \"linux\")".dependencies]
caps = "0.5.3"
libc = "0.2.81"
nix = "0.20.0"

[lib]
name = "solana_perf"

[dev-dependencies]
matches = "0.1.6"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
